# scientific-discovery-organism

./: .gitignore  LICENSE  README.md  pyproject.toml  railway.toml  requirements.txt  science_dashboard.py  science_organism.py  tempre_timechain.py
.devcontainer/: devcontainer.json
tests/: test_timechain.py
